--- a/ngMusicTracker/src/app/componets/contact/contact.component.html
+++ b/ngMusicTracker/src/app/componets/contact/contact.component.html
@@ -1,1 +1,28 @@
-<p>contact works!</p>
+<div class="container">
+
+      <div class="row">
+          <div class="col-md-3">
+              <div class="contact-box center-version">
+                  <a href="#profile.html">
+                      <img alt="image" class="img-circle" src="https://marketplace.canva.com/Foblk/MAEItxFoblk/1/tl/canva-happy-man-icon-MAEItxFoblk.png">
+                      <h3 class="m-b-xs"><strong>Zach Kotterer</strong></h3>
+
+                      <address class="m-t-md">
+                          <strong></strong><br>
+
+                          <br><br>
+                      </address>
+
+                  </a>
+                  <div class="contact-box-footer">
+                      <div class="m-t-xs btn-group">
+                          <a class="btn btn-xs btn-white" href="https://github.com/zachkott" target="_blank"><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"width="40" height="40"/> GitHub </a>
+                          <a class="btn btn-xs btn-white" href="https://www.linkedin.com/in/zachkott/" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" width="40" height="40"/>LinkedIn</a>
+
+                      </div>
+                  </div>
+
+              </div>
+          </div>
+      </div>
+</div>
