--- a/ngMusicTracker/src/app/componets/home/home.component.html
+++ b/ngMusicTracker/src/app/componets/home/home.component.html
@@ -1,1 +1,30 @@
-<h1>Home</h1>
+
+<body>
+
+  <div id ="div1">
+  <h1>Audiosthetics</h1>
+  <blockquote>"If music be the food of love, play on..."</blockquote>
+  <blockquote>- William Shakespeare</blockquote>
+  </div>
+  <div id ="div2">
+    <p>
+      Audiosthetics is a comprehensive and in-depth resource for finding out more about the albums,
+       bands, musicians and songs you love. <br> This site is in alpha testing and will have more features in the future.
+
+    </p>
+    <br>
+    <br>
+
+  </div>
+
+  <h5>On Audiosthetics you'll find:</h5>
+<br>
+
+  - In-Depth Information about your favorite albums, musicians and songs <br>
+  - Reviews of upcoming and classic albums including new releases <br>
+  - Ratings and picks of the recommended albums and songs within an artist's discography or tracks on an album <br>
+  - Staff picks of the albums our editors are into right now <br>
+  - Sound samples and streaming links to listen to the music <br>
+  - Personalized recommendations of albums that match your tastes
+  <br>
+</body>
