--- a/ngMusicTracker/src/app/componets/band/band.component.html
+++ b/ngMusicTracker/src/app/componets/band/band.component.html
@@ -9,6 +9,7 @@
       <th>Delete</th>
     </tr>
   </thead>
+  <tbody>
   <tr *ngFor="let band of bands" >
   <td (click)="displayBand(band); selected = band">{{band.name}}</td>
   <td>{{band.genre}}</td>
@@ -16,19 +17,24 @@
   <td>{{band.origin}}</td>
   <td><button class="btn btn-danger"  (click)="deleteBand(band.id)">X</button></td>
 </tr>
+</tbody>
 </table>
+<hr>
+<div class="container-fluid">
 <form *ngIf="!selected">
+  <h3>Register New Artist</h3>
   <label>Name: </label> <input type="text" name="name" [(ngModel)]="newBand.name"> <br>
   <label>Genre: </label> <input type="text" name="genre" [(ngModel)]="newBand.genre"> <br>
   <label>Label: </label><input type="text" name="label" [(ngModel)]="newBand.label" /> <br>
   <label>Origin: </label><input type="text" name="origin" [(ngModel)]="newBand.origin" /> <br>
-  <label>Lead Artist: </label><input type="text" name="leadArtist" [(ngModel)]="newBand.leadArtist" /> <br>
-  <label>Most Played: </label><input type="text" name="mostPlayed" [(ngModel)]="newBand.mostPlayed" /> <br>
+  <label>Vocals:</label><input type="text" name="leadArtist" [(ngModel)]="newBand.leadArtist" /> <br>
+  <label>Top Hit:</label><input type="text" name="mostPlayed" [(ngModel)]="newBand.mostPlayed" /> <br>
   <label>Albums: </label><input type="number" name="albums" [(ngModel)]="newBand.albums" /> <br>
   <label>Singles: </label><input type="number" name="singles" [(ngModel)]="newBand.songs" /> <br>
   <label>Members: </label><input type="number" name="members" [(ngModel)]="newBand.members" /> <br>
   <button (click)="addBand()">Add Artist</button>
   </form>
+</div>
 </div>
 
 
