--- a/ngMusicTracker/src/app/componets/home/home.component.css
+++ b/ngMusicTracker/src/app/componets/home/home.component.css
@@ -9,6 +9,8 @@
 
   body{
       min-height:100vh;
+      background-color: rgb(185, 143, 143);
+      text-align: center;
   }
 
   .navigation{
@@ -194,10 +196,44 @@
       padding-right:199px;
   }
   h1{
-      text-align:center;
+    font-size: 50px;
+  font-weight: bold;
+  text-align: center;
+  font-family: copperplate !important;
+  }
+  h5{
+    text-decoration: underline;
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+    font-family: copperplate !important;
   }
 
 
   h3 {
-      text-align:center;
+text-align: center;
   }
+
+  #div2{
+    background: rgb(232, 209, 180);
+    text-align: center;
+    padding-top: 10px;
+    font-size: 15px;
+    font-weight: bold;
+    text-align: center;
+    font-family: copperplate !important;
+    padding-bottom: 10 px;
+  }
+  #div1{
+    background: antiquewhite;
+
+  }
+
+  blockquote{
+    font-size: 20px;
+    font-style: italic;
+    text-align: center;
+    font-family: copperplate !important;
+   }
+
+
